--- a/meta/makefile.ttl
+++ b/meta/makefile.ttl
@@ -7,7 +7,12 @@
 	:version_from _:main ;
 	:readme_from _:main ;
 	:test_requires "Test::More 0.61" ;
-	:requires "Scalar::Util" , "common::sense" .
+	:requires 
+		"Scalar::Util" ,
+		"Carp" ,
+		"IO::Handle" ,
+		"XML::LibXML 1.62" ,
+		"common::sense" .
 
 _:main <http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#fileName> "lib/XML/LibXML/PrettyPrint.pm" .
 
