--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -5,7 +5,6 @@
 `XML-LibXML-PrettyPrint`
 	:test-requirement       [ :on "Test::More 0.61"^^:CpanId ];
 	:test-requirement       [ :on "Test::Warn"^^:CpanId ];
-	:runtime-requirement    [ :on "parent"^^:CpanId ];
-	:runtime-requirement    [ :on "Pragmatic"^^:CpanId ];
+	:runtime-requirement    [ :on "Exporter::Tiny"^^:CpanId ];
 	:runtime-requirement    [ :on "XML::LibXML 1.62"^^:CpanId ].
 
