backport to Perl 5.8.1
--HG--
branch : XML-LibXML-PrettyPrint

--- a/meta/makefile.pret
+++ b/meta/makefile.pret
@@ -5,6 +5,7 @@
 `XML-LibXML-PrettyPrint`
 	:test-requirement       [ :on "Test::More 0.61"^^:CpanId ];
 	:test-requirement       [ :on "Test::Warn"^^:CpanId ];
+	:runtime-requirement    [ :on "perl 5.008001"^^:CpanId ];
 	:runtime-requirement    [ :on "Exporter::Tiny"^^:CpanId ];
 	:runtime-requirement    [ :on "XML::LibXML 1.62"^^:CpanId ].
 
